--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -1,8 +1,39 @@
-<!-- blog/templates/blog/post_detail.html -->
 <!DOCTYPE html>
 <html>
   <head>
     <title>{{ post.title }}</title>
+    <style>
+      body {
+        font-family: "Georgia", serif;
+        max-width: 700px;
+        margin: 40px auto;
+        padding: 0 20px;
+        background: #fff;
+        color: #2c3e50;
+      }
+      h1 {
+        border-bottom: 2px solid #2980b9;
+        padding-bottom: 10px;
+      }
+      p {
+        line-height: 1.6;
+        font-size: 1.1em;
+      }
+      small {
+        color: #888;
+        font-size: 0.9em;
+      }
+      a {
+        display: inline-block;
+        margin-top: 30px;
+        color: #2980b9;
+        text-decoration: none;
+        font-weight: bold;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
     <h1>{{ post.title }}</h1>
