--- a/mysite/blog/templates/blog/post_form.html
+++ b/mysite/blog/templates/blog/post_form.html
@@ -30,6 +30,7 @@
         border-radius: 5px;
         font-size: 1em;
         font-family: inherit;
+        box-sizing: border-box;
       }
       button {
         background-color: #2980b9;
