--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -26,12 +26,19 @@
         list-style-type: none;
         padding: 0;
       }
-      li {
+      li a {
+        display: block;
         background: #fff;
         margin: 10px 0;
         padding: 15px 20px;
         border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        color: inherit;
+        text-decoration: none;
+        transition: background 0.2s;
+      }
+      li a:hover {
+        background: #e6f2ff;
       }
       small {
         color: #888;
@@ -45,6 +52,7 @@
         color: white;
         border-radius: 5px;
         font-weight: bold;
+        text-decoration: none;
       }
       .new-post-btn:hover {
         background-color: #219150;
@@ -57,8 +65,10 @@
     <ul>
       {% for post in posts %}
       <li>
-        <a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a><br />
-        <small>{{ post.created_at }}</small>
+        <a href="{% url 'post_detail' post.pk %}">
+          {{ post.title }}<br />
+          <small>{{ post.created_at }}</small>
+        </a>
       </li>
       {% empty %}
       <li>No posts yet.</li>
